experimental/ir/testdata/tags/fields.proto.stderr.txt
error: field numbers must be unique
  --> testdata/tags/fields.proto:22:25
   |
21 |     optional int32 y = 2;
   |                        - first used here
22 |     optional int32 y2 = 2;
   |                         ^ used again here

error: field number out of range
  --> testdata/tags/fields.proto:24:25
   |
24 |     optional int32 z1 = 0;
   |                         ^
   = note: the range for field numbers is `1 to 536870911`,
           minus `19000 to 19999`, which is reserved for internal use

error: field number out of range
  --> testdata/tags/fields.proto:25:26
   |
25 |     optional int32 z12 = 0;
   |                          ^
   = note: the range for field numbers is `1 to 536870911`,
           minus `19000 to 19999`, which is reserved for internal use

error: field number out of range
  --> testdata/tags/fields.proto:27:25
   |
27 |     optional int32 z3 = 0x20000000;
   |                         ^^^^^^^^^^
   = note: the range for field numbers is `0x1 to 0x1fffffff`,
           minus `0x4a38 to 0x4e1f`, which is reserved for internal use

error: field number out of range
  --> testdata/tags/fields.proto:28:25
   |
28 |     optional int32 z4 = 0Xffffffff;
   |                         ^^^^^^^^^^
   = note: the range for field numbers is `0X1 to 0X1fffffff`,
           minus `0X4a38 to 0X4e1f`, which is reserved for internal use

error: field number out of range
  --> testdata/tags/fields.proto:29:25
   |
29 |     optional int32 z5 = 04777777777;
   |                         ^^^^^^^^^^^
   = note: the range for field numbers is `01 to 03777777777`,
           minus `045070 to 047037`, which is reserved for internal use

error: `z6` declared multiple times
  --> testdata/tags/fields.proto:31:20
   |
31 |     optional int32 z6 = 0xffffffffffffffffffffffffffffffff;
   |                    ^^ first here, as a message field
32 |
33 |     optional int32 z6 = -1;
   |                    -- ...also declared here

error: field number out of range
  --> testdata/tags/fields.proto:31:25
   |
31 |     optional int32 z6 = 0xffffffffffffffffffffffffffffffff;
   |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: the range for field numbers is `0x1 to 0x1fffffff`,
           minus `0x4a38 to 0x4e1f`, which is reserved for internal use

error: field number out of range
  --> testdata/tags/fields.proto:33:25
   |
33 |     optional int32 z6 = -1;
   |                         ^^
   = note: the range for field numbers is `1 to 536870911`,
           minus `19000 to 19999`, which is reserved for internal use

error: field number out of range
  --> testdata/tags/fields.proto:35:25
   |
35 |     optional int32 r1 = 19000;
   |                         ^^^^^
   = note: the range for field numbers is `1 to 536870911`,
           minus `19000 to 19999`, which is reserved for internal use

error: field number out of range
  --> testdata/tags/fields.proto:36:25
   |
36 |     optional int32 r2 = 19001;
   |                         ^^^^^
   = note: the range for field numbers is `1 to 536870911`,
           minus `19000 to 19999`, which is reserved for internal use

error: field number out of range
  --> testdata/tags/fields.proto:37:25
   |
37 |     optional int32 r3 = 19999;
   |                         ^^^^^
   = note: the range for field numbers is `1 to 536870911`,
           minus `19000 to 19999`, which is reserved for internal use

error: mismatched types
  --> testdata/tags/fields.proto:42:25
   |
42 |     optional float f1 = 1.0;
   |                         ^^^ expected field number, found floating-point literal
   = note: expected: field number
              found: floating-point literal

error: mismatched types
  --> testdata/tags/fields.proto:43:25
   |
43 |     optional float f2 = -1.0;
   |                         ^^^^ expected field number, found floating-point literal
   = note: expected: field number
              found: floating-point literal

error: mismatched types
  --> testdata/tags/fields.proto:44:25
   |
44 |     optional float f3 = inf;
   |                         ^^^ expected field number, found floating-point literal
   = note: expected: field number
              found: floating-point literal

error: mismatched types
  --> testdata/tags/fields.proto:45:25
   |
45 |     optional float f4 = -inf;
   |                         ^^^^ expected field number, found floating-point literal
   = note: expected: field number
              found: floating-point literal

error: mismatched types
  --> testdata/tags/fields.proto:46:25
   |
46 |     optional float f5 = nan;
   |                         ^^^ expected field number, found floating-point literal
   = note: expected: field number
              found: floating-point literal

error: mismatched types
  --> testdata/tags/fields.proto:48:24
   |
48 |     optional bool b1 = false;
   |                        ^^^^^ expected field number, found `bool`
   = note: expected: field number
              found: scalar type `bool`

error: mismatched types
  --> testdata/tags/fields.proto:49:24
   |
49 |     optional bool b2 = true;
   |                        ^^^^ expected field number, found `bool`
   = note: expected: field number
              found: scalar type `bool`

error: `max` outside of range expression
  --> testdata/tags/fields.proto:50:24
   |
50 |     optional bool b3 = max;
   |                        ^^^
   = note: the special `max` expression is only allowed in a range expression

encountered 20 errors
